# cmakeModules

./: FindAIETools.cmake  FindAietools.cmake  FindLibXAIE.cmake  FindPeano.cmake  FindVitis.cmake  FindVitisAIE.cmake  FindVitisAIE2.cmake  FindVitisHLS.cmake  FindVivadoHLS.cmake  FindXRT.cmake  LICENSE  README.md  genericRules.cmake  rulesForSds.cmake  toolchain_clang_crosscomp_arm.cmake  toolchain_clang_crosscomp_arm_petalinux.cmake  toolchain_crosscomp_arm.cmake  toolchain_sds.cmake  toolchain_vitis_crosscomp_arm.cmake
unittests/: lit-test.py  lit.cfg.py
unittests/buildTest/: CMakeLists.txt  main.cpp
unittests/findAIEToolsTest/: CMakeLists.txt
unittests/findAietoolsTest/: CMakeLists.txt
unittests/findLibXAIETest/: CMakeLists.txt
unittests/findVitisHLSTest/: CMakeLists.txt
unittests/findVitisTest/: CMakeLists.txt
unittests/findXRTTest/: CMakeLists.txt
